--- a/core3/model-api/trunk/pom.xml
+++ b/core3/model-api/trunk/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>org.cytoscape</groupId>
-    <version>3.0.0-alpha4</version>
+    <version>3.0.0-alpha6-SNAPSHOT</version>
   </parent>
 
   <properties>
@@ -32,9 +32,6 @@
       <resource>
         <directory>src/main/resources</directory>
       </resource>
-      <!--
-	  | example additional resource entries, useful when building Eclipse RCP applications
-	-->
       <resource>
         <directory>.</directory>
         <includes>
@@ -48,33 +45,19 @@
       <plugin>
         <groupId>org.ops4j</groupId>
         <artifactId>maven-pax-plugin</artifactId>
-        <version>1.4</version>
-        <!--
-            | enable improved OSGi compilation support for the bundle life-cycle.
-            | to switch back to the standard bundle life-cycle, move this setting
-            | down to the maven-bundle-plugin section
-          -->
+        <version>${maven-pax-plugin.version}</version>
         <extensions>true</extensions>
       </plugin>
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <version>1.4.3</version>
-        <!--
-            | the following instructions build a simple set of public/private classes into an OSGi bundle
-          -->
+        <version>${maven-bundle-plugin.version}</version>
         <configuration>
           <instructions>
             <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
-            <Bundle-Version>${pom.version}</Bundle-Version>
-            <!--
-		| assume public classes are in the top package, and private classes are under ".internal"
-              -->
-            <Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${pom.version}"</Export-Package>
+            <Bundle-Version>${project.version}</Bundle-Version>
+            <Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${project.version}"</Export-Package>
             <Private-Package>${bundle.namespace}.internal.*</Private-Package>
-            <!--
-		| each module can override these defaults in their osgi.bnd file
-              -->
             <_include>-osgi.bnd</_include>
           </instructions>
         </configuration>
@@ -82,6 +65,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
+        <version>${maven-jar-plugin.version}</version>
         <executions>
           <execution>
             <goals>
