--- a/core3/cmdline-parser-impl/trunk/pom.xml
+++ b/core3/cmdline-parser-impl/trunk/pom.xml
@@ -87,7 +87,7 @@
         <configuration>
           <instructions>
             <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
-            <Bundle-Version>${pom.version}</Bundle-Version>
+            <Bundle-Version>${project.version}</Bundle-Version>
             <!--
              | assume public classes are in the top package, and private classes are under ".internal"
             -->
