--- a/core3/log-swing-impl/trunk/pom.xml
+++ b/core3/log-swing-impl/trunk/pom.xml
@@ -63,9 +63,9 @@
 					<instructions>
 						<Bundle-SymbolicName>${bundle.symbolicName}
 						</Bundle-SymbolicName>
-						<Bundle-Version>${pom.version}</Bundle-Version>
+						<Bundle-Version>${project.version}</Bundle-Version>
 						<Export-Package>
-							!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${pom.version}",org.apache.commons.collections.*
+							!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${project.version}",org.apache.commons.collections.*
 						</Export-Package>
 						<Private-Package>${bundle.namespace}.internal.*
 						</Private-Package>
