Updated parent POM version for Maven 3.
git-svn-id: http://chianti.ucsd.edu/svn@24362 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/equations-functions-impl/trunk/pom.xml
+++ b/core3/equations-functions-impl/trunk/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<artifactId>parent</artifactId>
 		<groupId>org.cytoscape</groupId>
-		<version>3.0.0-alpha3</version>
+		<version>3.0.0-alpha6-SNAPSHOT</version>
 	</parent>
 
 	<properties>
