--- a/core3/cmdline-parser-impl/trunk/pom.xml
+++ b/core3/cmdline-parser-impl/trunk/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>org.cytoscape</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <version>3.0.0-alpha6-SNAPSHOT</version>
   </parent>
 
   <properties>
