--- a/core3/filter-impl/trunk/pom.xml
+++ b/core3/filter-impl/trunk/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.cytoscape</groupId>
 		<artifactId>parent</artifactId>
-		<version>3.0.0-alpha5</version>
+		<version>3.0.0-alpha6-SNAPSHOT</version>
 	</parent>
 	<properties>
 		<bundle.symbolicName>org.cytoscape.filter-impl</bundle.symbolicName>
