--- a/core3/psi-mi-impl/trunk/pom.xml
+++ b/core3/psi-mi-impl/trunk/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.cytoscape</groupId>
     <artifactId>parent</artifactId>
-    <version>3.0.0-alpha5</version>
+    <version>3.0.0-alpha6-SNAPSHOT</version>
   </parent>
   <properties>
     <bundle.symbolicName>org.cytoscape.psi-mi-impl</bundle.symbolicName>
