--- a/core3/task-testing-impl/trunk/pom.xml
+++ b/core3/task-testing-impl/trunk/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.cytoscape</groupId>
 		<artifactId>parent</artifactId>
-		<version>3.0.0-alpha4</version>
+		<version>3.0.0-alpha6-SNAPSHOT</version>
 	</parent>
 
 	<properties>
