--- a/core3/util-intr/trunk/pom.xml
+++ b/core3/util-intr/trunk/pom.xml
@@ -69,7 +69,7 @@
       <plugin>
         <groupId>org.ops4j</groupId>
         <artifactId>maven-pax-plugin</artifactId>
-        <version>1.4</version>
+        <version>1.5-SNAPSHOT</version>
         <!--
            | enable improved OSGi compilation support for the bundle life-cycle.
            | to switch back to the standard bundle life-cycle, move this setting
