--- a/core3/swing-util/trunk/pom.xml
+++ b/core3/swing-util/trunk/pom.xml
@@ -72,7 +72,7 @@
       <plugin>
         <groupId>org.ops4j</groupId>
         <artifactId>maven-pax-plugin</artifactId>
-        <version>1.4</version>
+        <version>1.5-SNAPSHOT</version>
         <extensions>true</extensions>
       </plugin>
       <plugin>
