updates for maven 3
git-svn-id: http://chianti.ucsd.edu/svn@24382 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscape/trunk/acceptance-testing/pom.xml
+++ b/cytoscape/trunk/acceptance-testing/pom.xml
@@ -20,7 +20,7 @@
     <dependency>
       <groupId>cytoscape</groupId>
       <artifactId>application</artifactId>
-      <version>${version}</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
