--- a/cytoscape/trunk/corelibs/geom.rtree/pom.xml
+++ b/cytoscape/trunk/corelibs/geom.rtree/pom.xml
@@ -41,12 +41,12 @@
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>util-intr</artifactId>
-      <version>${version}</version>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>geom-spacial</artifactId>
-      <version>${version}</version>
+      <version>${project.version}</version>
     </dependency>
   </dependencies>
 
