--- a/cytoscape/trunk/coreplugins/EquationFunctions/pom.xml
+++ b/cytoscape/trunk/coreplugins/EquationFunctions/pom.xml
@@ -49,7 +49,7 @@
     <dependency>
       <groupId>cytoscape.corelibs</groupId>
       <artifactId>equations</artifactId>
-      <version>${version}</version>
+      <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
