--- a/cytoscape/trunk/archetypes/sample-plugin/pom.xml
+++ b/cytoscape/trunk/archetypes/sample-plugin/pom.xml
@@ -23,6 +23,7 @@
     </extensions>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-archetype-plugin</artifactId>
         <version>2.0-alpha-5</version>
         <extensions>true</extensions>
@@ -36,6 +37,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-invoker-plugin</artifactId>
+        <version>1.5</version>
         <executions>
           <execution>
             <id>integration-test</id>
@@ -68,6 +70,7 @@
         </configuration>
       </plugin> 
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-clean-plugin</artifactId>
         <version>2.4.1</version>
         <executions>
