--- a/cytoscape/trunk/corelibs/docs/pom.xml
+++ b/cytoscape/trunk/corelibs/docs/pom.xml
@@ -40,7 +40,9 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
+          <version>2.2.1</version>
         <configuration>
           <descriptors>
             <descriptor>src/main/assembly/html.xml</descriptor>
@@ -113,6 +115,7 @@
       <plugin>
         <groupId>com.agilejava.docbkx</groupId>
         <artifactId>docbkx-maven-plugin</artifactId>
+        <version>2.0.9</version>
         <executions>
           <execution>
             <goals>
