--- a/cytoscape/trunk/coreplugins/PSI-MI/pom.xml
+++ b/cytoscape/trunk/coreplugins/PSI-MI/pom.xml
@@ -46,6 +46,7 @@
       <plugin>
         <groupId>org.jvnet.jaxb2.maven2</groupId>
         <artifactId>maven-jaxb2-plugin</artifactId>
+        <version>0.7.4</version>
           <executions>
             <execution>
               <id>mi1</id>
@@ -88,15 +89,7 @@
         <pluginRepository>
             <id>maven2-repository.dev.java.net</id>
             <name>Java.net Maven 2 Repository</name>
-            <url>http://download.java.net/maven/2
-            </url>
-        </pluginRepository>
-        <pluginRepository>
-            <id>maven-repository.dev.java.net</id>
-            <name>Java.net Maven 1 Repository (legacy)</name>
-            <url>http://download.java.net/maven/1
-            </url>
-            <layout>legacy</layout>
+            <url>http://download.java.net/maven/2</url>
         </pluginRepository>
     </pluginRepositories>
 
