--- a/cytoscape/trunk/coreplugins/pom.xml
+++ b/cytoscape/trunk/coreplugins/pom.xml
@@ -126,7 +126,7 @@
     <dependency>
       <groupId>cytoscape</groupId>
       <artifactId>application</artifactId>
-      <version>${version}</version>
+      <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
