--- a/cytoscape/trunk/pom.xml
+++ b/cytoscape/trunk/pom.xml
@@ -27,7 +27,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
-        <version>2.0</version>
+        <version>2.3.1</version>
         <configuration>
           <tagBase>svn+ssh://grenache.ucsd.edu/cellar/common/svn/cytoscape/tags</tagBase>
           <autoVersionSubmodules>true</autoVersionSubmodules>
@@ -40,6 +40,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
         <configuration>
           <source>1.6</source>
           <target>1.6</target>
@@ -51,6 +52,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.7.1</version>
         <configuration>
           <argLine>-Xmx256m</argLine>
           <redirectTestOutputToFile>true</redirectTestOutputToFile>
@@ -59,6 +61,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.7</version>
         <configuration>
           <encoding>UTF-8</encoding>
           <locale>en</locale>
@@ -66,8 +69,8 @@
           <links>
             <link>http://download.oracle.com/javase/1.5.0/docs/api/</link>
           </links>
-          <footer>Cytoscape ${version} API</footer>
-          <header>Cytoscape ${version} API</header>
+          <footer>Cytoscape ${project.version} API</footer>
+          <header>Cytoscape ${project.version} API</header>
           <bottom>Copyright 2010 Cytoscape Consortium.  All rights reserved.</bottom>
           <maxmemory>2g</maxmemory>
           <additionalJOption>-J-Xmx2g</additionalJOption>
@@ -84,6 +87,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
+        <version>2.1.2</version>
         <executions>
           <execution>
             <id>attach-sources</id>
