--- a/core3/default-mappingcalculators/trunk/pom.xml
+++ b/core3/default-mappingcalculators/trunk/pom.xml
@@ -40,6 +40,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>maven-surefire-plugin.version</version>
 				<configuration>
 					<redirectTestOutputToFile>true</redirectTestOutputToFile>
 				</configuration>
@@ -47,7 +48,7 @@
 			<plugin>
 				<groupId>org.ops4j</groupId>
 				<artifactId>maven-pax-plugin</artifactId>
-				<version>1.4</version>
+				<version>${maven-pax-plugin.version}</version>
 				<!-- | enable improved OSGi compilation support for the bundle life-cycle. 
 					| to switch back to the standard bundle life-cycle, move this setting | down 
 					to the maven-bundle-plugin section -->
