--- a/core3/cmdline-application/trunk/pom.xml
+++ b/core3/cmdline-application/trunk/pom.xml
@@ -24,7 +24,9 @@
 	<build>
 	  <plugins>
 	    <plugin>
+	      <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-assembly-plugin</artifactId>
+	      <version>2.2</version>
               <configuration>
 		<descriptors>
 		  <descriptor>assembly.xml</descriptor>
