--- a/core3/graph-render/trunk/pom.xml
+++ b/core3/graph-render/trunk/pom.xml
@@ -74,7 +74,7 @@
 			<plugin>
 				<groupId>org.ops4j</groupId>
 				<artifactId>maven-pax-plugin</artifactId>
-				<version>1.5-SNAPSHOT</version>
+				<version>${maven-pax-plugin.version}</version>
 				<!-- | enable improved OSGi compilation support for the bundle life-cycle. 
 					| to switch back to the standard bundle life-cycle, move this setting | down 
 					to the maven-bundle-plugin section -->
@@ -83,7 +83,7 @@
 			<plugin>
 				<groupId>org.apache.felix</groupId>
 				<artifactId>maven-bundle-plugin</artifactId>
-				<version>1.4.3</version>
+				<version>${maven-bundle-plugin.version}</version>
 				<configuration>
 					<instructions>
 						<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
