--- a/core3/math-xform/trunk/pom.xml
+++ b/core3/math-xform/trunk/pom.xml
@@ -57,13 +57,13 @@
       <plugin>
         <groupId>org.ops4j</groupId>
         <artifactId>maven-pax-plugin</artifactId>
-        <version>1.5-SNAPSHOT</version>
+        <version>${maven-pax-plugin.version}</version>
         <extensions>true</extensions>
       </plugin>
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <version>1.4.3</version>
+        <version>${maven-bundle-plugin.version}</version>
         <configuration>
           <instructions>
             <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
