--- a/core3/model-impl/trunk/pom.xml
+++ b/core3/model-impl/trunk/pom.xml
@@ -23,22 +23,22 @@
 		<url>http://chianti.ucsd.edu/svn/core3/model-impl/trunk</url>
 	</scm>
 
-    <build>
-        <plugins>
+	<build>
+          <plugins>
             <plugin>
-                <inherited>false</inherited>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>2.1</version>
-                <configuration>
-                    <autoVersionSubmodules>true</autoVersionSubmodules>
-                    <goals>deploy</goals>
-                    <!-- so that impl bundles with modules will build correctly -->
-                    <preparationGoals>clean install</preparationGoals>
-                </configuration>
+              <inherited>false</inherited>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-release-plugin</artifactId>
+              <version>${maven-release-plugin.version}</version>
+              <configuration>
+                <autoVersionSubmodules>true</autoVersionSubmodules>
+                <goals>deploy</goals>
+                <!-- so that impl bundles with modules will build correctly -->
+                <preparationGoals>clean install</preparationGoals>
+              </configuration>
             </plugin>
-        </plugins>
-    </build>
+          </plugins>
+	</build>
 
 	<repositories>
 		<repository>
