--- a/core3/plugin-api/trunk/pom.xml
+++ b/core3/plugin-api/trunk/pom.xml
@@ -58,7 +58,7 @@
     <plugins>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.2-beta-5</version>
+        <version>2.2</version>
         <configuration>
           <descriptorRefs>
             <descriptorRef>jar-with-dependencies</descriptorRef>
@@ -83,13 +83,13 @@
       <plugin>
         <groupId>org.ops4j</groupId>
         <artifactId>maven-pax-plugin</artifactId>
-        <version>1.4</version>
+        <version>${maven-pax-plugin.version}</version>
         <extensions>true</extensions>
       </plugin>
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <version>1.4.3</version>
+        <version>${maven-bundle-plugin.version}</version>
         <configuration>
           <instructions>
             <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
@@ -101,6 +101,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
+	<version>maven-jar-plugin.version</version>
         <executions>
           <execution>
             <goals>
@@ -110,8 +111,9 @@
         </executions>
       </plugin>
       <plugin>
+	<groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.7</version>
+        <version>${maven-javadoc-plugin.version}</version>
         <configuration>
           <encoding>UTF-8</encoding>
           <locale>en</locale>
