--- a/core3/plugin-impl/trunk/pom.xml
+++ b/core3/plugin-impl/trunk/pom.xml
@@ -48,6 +48,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <version>${maven-surefire-plugin.version}</version>
         <configuration>
           <redirectTestOutputToFile>true</redirectTestOutputToFile>
         </configuration>
@@ -55,7 +56,7 @@
       <plugin>
         <groupId>org.ops4j</groupId>
         <artifactId>maven-pax-plugin</artifactId>
-        <version>1.4</version>
+        <version>${maven-pax-plugin.version}</version>
         <!--
            | enable improved OSGi compilation support for the bundle life-cycle.
            | to switch back to the standard bundle life-cycle, move this setting
@@ -66,7 +67,7 @@
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <version>1.4.3</version>
+        <version>${maven-bundle-plugin.version}</version>
         <!--
          | the following instructions build a simple set of public/private classes into an OSGi bundle
         -->
