--- a/core3/psi-mi-impl/trunk/pom.xml
+++ b/core3/psi-mi-impl/trunk/pom.xml
@@ -62,6 +62,7 @@
       <plugin>
 	<groupId>org.jvnet.jaxb2.maven2</groupId>
 	<artifactId>maven-jaxb2-plugin</artifactId>
+	<version>0.7.4</version>
 	<executions>
 	  <execution>
 	    <id>mi1</id>
@@ -100,13 +101,13 @@
       <plugin>
 	<groupId>org.ops4j</groupId>
 	<artifactId>maven-pax-plugin</artifactId>
-	<version>1.4</version>
+	<version>${maven-pax-plugin.version}</version>
 	<extensions>true</extensions>
       </plugin>
       <plugin>
 	<groupId>org.apache.felix</groupId>
 	<artifactId>maven-bundle-plugin</artifactId>
-	<version>1.4.3</version>
+	<version>${maven-bundle-plugin.version}</version>
 	<configuration>
 	  <instructions>
 	    <Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
