--- a/core3/swing-application-api/trunk/pom.xml
+++ b/core3/swing-application-api/trunk/pom.xml
@@ -29,25 +29,25 @@
 			<plugin>
 				<groupId>org.ops4j</groupId>
 				<artifactId>maven-pax-plugin</artifactId>
-				<version>1.5-SNAPSHOT</version>
+				<version>${maven-pax-plugin.version}</version>
 				<extensions>true</extensions>
 			</plugin>
-		<plugin>
-			<groupId>org.apache.felix</groupId>
-			<artifactId>maven-bundle-plugin</artifactId>
-			<version>1.4.3</version>
-			<configuration>
-				<instructions>
-					<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
-					<Bundle-Version>${project.version}</Bundle-Version>
-					<Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${project.version}"</Export-Package>
-					<Private-Package>${bundle.namespace}.internal.*</Private-Package>
-					<_include>-osgi.bnd</_include>
-				</instructions>
-			</configuration>
-		</plugin>
-    </plugins>
-  </build>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<version>${maven-bundle-plugin.version}</version>
+				<configuration>
+					<instructions>
+						<Bundle-SymbolicName>${bundle.symbolicName}</Bundle-SymbolicName>
+						<Bundle-Version>${project.version}</Bundle-Version>
+						<Export-Package>!${bundle.namespace}.internal.*,${bundle.namespace}.*;version="${project.version}"</Export-Package>
+						<Private-Package>${bundle.namespace}.internal.*</Private-Package>
+						<_include>-osgi.bnd</_include>
+					</instructions>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 	<dependencies>
 		<dependency>
