--- a/core3/taglets/trunk/pom.xml
+++ b/core3/taglets/trunk/pom.xml
@@ -1,37 +1,43 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>parent</artifactId>
+		<groupId>org.cytoscape</groupId>
+		<version>3.0.0-alpha6-SNAPSHOT</version>
+	</parent>
 
-  <groupId>org.cytoscape</groupId>
-  <artifactId>taglets</artifactId>
-  <version>3.0.0-alpha2-SNAPSHOT</version>
-  <packaging>jar</packaging>
+	<modelVersion>4.0.0</modelVersion>
 
-  <name>Cytoscape Documentation Taglets</name>
+	<groupId>org.cytoscape</groupId>
+	<artifactId>taglets</artifactId>
+	<version>3.0.0-alpha2-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+	<name>Cytoscape Documentation Taglets</name>
 
-  <scm>
-    <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/taglets/trunk</connection>
-    <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/taglets/trunk</developerConnection>
-    <url>http://chianti.ucsd.edu/svn/core3/taglets/trunk</url>
-  </scm>
+	<properties>
+	  <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.8.1</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-all</artifactId>
-      <version>1.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+	<scm>
+	  <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/taglets/trunk</connection>
+	  <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/taglets/trunk</developerConnection>
+	  <url>http://chianti.ucsd.edu/svn/core3/taglets/trunk</url>
+	</scm>
+
+	<dependencies>
+	  <dependency>
+	    <groupId>junit</groupId>
+	    <artifactId>junit</artifactId>
+	    <version>4.8.1</version>
+	    <scope>test</scope>
+	  </dependency>
+	  <dependency>
+	    <groupId>org.mockito</groupId>
+	    <artifactId>mockito-all</artifactId>
+	    <version>1.8.1</version>
+	    <scope>test</scope>
+	  </dependency>
+	</dependencies>
 
 	<distributionManagement>
 		<repository>
@@ -51,6 +57,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven-compiler-plugin.version}</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
@@ -67,6 +74,7 @@
 				<!-- Plugin for generating Javadoc. -->
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>${maven-javadoc-plugin.version}</version>
 				<configuration>
 					<encoding>UTF-8</encoding>
 					<locale>en</locale>
@@ -91,6 +99,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
+				<version>${maven-source-plugin.version}</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
