--- a/core3/viewmodel-api/trunk/pom.xml
+++ b/core3/viewmodel-api/trunk/pom.xml
@@ -39,6 +39,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
+				<version>${maven-jar-plugin.version}</version>
 				<executions>
 					<execution>
 						<goals>
@@ -50,7 +51,7 @@
 			<plugin>
 				<groupId>org.ops4j</groupId>
 				<artifactId>maven-pax-plugin</artifactId>
-				<version>1.5-SNAPSHOT</version>
+				<version>${maven-pax-plugin.version}</version>
 				<!-- | enable improved OSGi compilation support for the bundle life-cycle. 
 					| to switch back to the standard bundle life-cycle, move this setting | down 
 					to the maven-bundle-plugin section -->
