--- a/core3/viewmodel-impl/trunk/pom.xml
+++ b/core3/viewmodel-impl/trunk/pom.xml
@@ -29,7 +29,7 @@
 				<inherited>false</inherited>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.1</version>
+				<version>${maven-release-plugin.version}</version>
 				<configuration>
 					<autoVersionSubmodules>true</autoVersionSubmodules>
 					<goals>deploy</goals>
