--- a/core3/vizmap-gui-api/trunk/pom.xml
+++ b/core3/vizmap-gui-api/trunk/pom.xml
@@ -74,7 +74,7 @@
 			<plugin>
 				<groupId>org.ops4j</groupId>
 				<artifactId>maven-pax-plugin</artifactId>
-				<version>1.5-SNAPSHOT</version>
+				<version>${maven-pax-plugin.version}</version>
 				<!-- | enable improved OSGi compilation support for the bundle life-cycle. 
 					| to switch back to the standard bundle life-cycle, move this setting | down 
 					to the maven-bundle-plugin section -->
