--- a/core3/work-spring-hack/trunk/pom.xml
+++ b/core3/work-spring-hack/trunk/pom.xml
@@ -75,7 +75,7 @@
       <plugin>
         <groupId>org.ops4j</groupId>
         <artifactId>maven-pax-plugin</artifactId>
-        <version>1.4</version>
+        <version>${maven-pax-plugin.version}</version>
         <!--
            | enable improved OSGi compilation support for the bundle life-cycle.
            | to switch back to the standard bundle life-cycle, move this setting
@@ -86,7 +86,7 @@
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <version>1.4.3</version>
+        <version>${maven-bundle-plugin.version}</version>
         <!--
          | the following instructions build a simple set of public/private classes into an OSGi bundle
         -->
