updated for maven 3
git-svn-id: http://chianti.ucsd.edu/svn@24401 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/launch-framework/trunk/launcher/pom.xml
+++ b/core3/launch-framework/trunk/launcher/pom.xml
@@ -52,7 +52,7 @@
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>cmdline</artifactId>
-      <version>${version}</version>
+      <version>${project.version}</version>
     </dependency>
     <!-- This is to get the the felix framework into the bundle. -->
     <dependency>
