added proper execution
git-svn-id: http://chianti.ucsd.edu/svn@24420 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/command-executor-impl/trunk/pom.xml
+++ b/core3/command-executor-impl/trunk/pom.xml
@@ -83,6 +83,11 @@
 			<artifactId>core-task-api</artifactId>
 			<version>3.0.0-alpha2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>work-spring-hack</artifactId>
+			<version>3.0.0-alpha1</version>
+		</dependency>
 	</dependencies>
 
 </project>
