fixed npe in file filter
git-svn-id: http://chianti.ucsd.edu/svn@24426 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/sbml-impl/trunk/pom.xml
+++ b/core3/sbml-impl/trunk/pom.xml
@@ -15,8 +15,7 @@
 	<groupId>org.cytoscape</groupId>
 	<artifactId>sbml-impl</artifactId>
 	<version>1.0-SNAPSHOT</version>
-	<name>${bundle.symbolicName}
-		[${bundle.namespace}]</name>
+	<name>${bundle.symbolicName} [${bundle.namespace}]</name>
 	<packaging>bundle</packaging>
 	<dependencies>
 		<dependency>
