added cytoscape repos to the plugin repos info
git-svn-id: http://chianti.ucsd.edu/svn@24486 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/parent/trunk/pom.xml
+++ b/core3/parent/trunk/pom.xml
@@ -231,9 +231,31 @@
 			<id>ops4j-snapshots</id>
 			<name>OPS4J Snapshots</name>
 			<url>https://oss.sonatype.org/content/repositories/ops4j-snapshots</url>
-            <snapshots>
-              <enabled>true</enabled>
-            </snapshots>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+		</pluginRepository>
+		<pluginRepository>
+			<id>cytoscape_snapshots</id>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<name>Cytoscape Snapshots</name>
+			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots/</url>
+		</pluginRepository>
+		<pluginRepository>
+			<id>cytoscape_releases</id>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<name>Cytoscape Releases</name>
+			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases/</url>
 		</pluginRepository>
 	</pluginRepositories>
 
